@@ -1,5 +1,7 @@
 Revision history for Acme-CPANAuthors-British
 
+        - added BRIANG and WDH.
+
 0.19    2013-06-09
         - added MJEMMESON (Michael Jemmeson)
 
